stream.tolist is immutable