@@ -27,6 +27,7 @@ import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.springframework.scheduling.annotation.Scheduled;
 
@@ -188,7 +189,7 @@ public abstract class EntityService<K, T extends Entity<K>> {
 				.map(id -> deleteById(id))
 				.filter(opt -> opt.isPresent())
 				.map(opt -> opt.get())
-				.toList();
+				.collect(Collectors.toList());
 		});
 	}
 	
@@ -201,7 +202,7 @@ public abstract class EntityService<K, T extends Entity<K>> {
 				.map(id -> deleteById(id))
 				.filter(opt -> opt.isPresent())
 				.map(opt -> opt.get())
-				.toList();
+				.collect(Collectors.toList());
 		});
 	}
 	
@@ -214,7 +215,7 @@ public abstract class EntityService<K, T extends Entity<K>> {
 			.filter(o -> o.isPresent())
 			.map(o -> o.get())
 			.filter(item -> item.getFields().keySet().containsAll(fields.keySet()))
-			.toList();
+			.collect(Collectors.toList());
 		});
 	}
 	
@@ -223,7 +224,7 @@ public abstract class EntityService<K, T extends Entity<K>> {
 		// TODO error for undefined filters
 		var producers = filters.stream()
 		.filter(f -> queryProducer.containsKey(f.getId()))
-		.toList();
+		.collect(Collectors.toList());
 		
 		if(producers.size() == 0) {
 			producers = Collections.singletonList(new Filter(PRODUCER_ID_ALL,""));
@@ -245,7 +246,7 @@ public abstract class EntityService<K, T extends Entity<K>> {
 		.map(id -> entityCache.get(id))
 		.filter(o -> o.isPresent())
 		.map(o -> o.get())
-		.toList();
+		.collect(Collectors.toList());
 		
 		filters.stream()
 		.filter(f -> queryFilter.containsKey(f.getId()))
