@@ -24,6 +24,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class IndexEqual<K, T extends BaseEntity<K>> implements Index<K, T> {
 	private final Function<T, Set<Object>> mapper;
@@ -62,7 +63,7 @@ public class IndexEqual<K, T extends BaseEntity<K>> implements Index<K, T> {
 	@Override
 	public List<K> get(Object key) {
 		return Optional.ofNullable(objects.get(key))
-				.map(s -> s.stream().toList())
+				.map(s -> s.stream().collect(Collectors.toList()))
 				.orElse(Collections.emptyList());
 	}
 
